--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
     "react-webcam": "^7.2.0",
+    "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
