--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "framer-motion": "^12.23.0",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.6.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
     "react-webcam": "^7.2.0",
